# py-snp-utils

./: .markdownlint.yaml  .pylintrc  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: lint-md.yml  pylint.yml  pytest.yml  ruff.yml  spdx.yml
examples/: README.md  display.py  fetch.py  verify.py
pysnputils/: __init__.py  fetch.py  types.py  verify.py
