[build-system]
requires = ["setuptools>=82.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pysnputils"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "requests >= 2.32.5",
  "cryptography >= 46.0.5"
]

[tool.setuptools.packages.find]
include = ["pysnputils*"]
